# xenon

./: .gitignore  CMakeLists.txt  Readme.md  build.sh  layout.txt
contrib/: bochsrc.txt  config.gcc  debug.sh  gdbinit  grub.cfg  t-x86_64-elf
pics/: logo.txt
src/: CMakeLists.txt
src/kernel/: CMakeLists.txt  arch_factory.h  arch_interface.h  config.h  crti.S  main.cpp  set_arch.h  test_timer.h
src/kernel/appendix/: CMakeLists.txt  crti.S  crtn.S  cxa_guard.cpp  cxa_purevirtual.cpp  icxxabi.cpp  icxxabi.h
src/kernel/arch/: CMakeLists.txt
src/kernel/arch/amd64/: CMakeLists.txt  amd64_interface.cpp  amd64_interface.h  boot.S  instructions.h  regs.h
src/kernel/arch/amd64/bootstrap/: CMakeLists.txt  boot.S  exception.cpp  exception.h  gdt.S  isr.S  segments.cpp  segments.h
src/kernel/arch/amd64/driver/: CMakeLists.txt  amd64_ahci.h  amd64_ide.cpp  amd64_ide.h  amd64_keyboard.cpp  amd64_keyboard.h  amd64_pci.cpp  amd64_pci.h  amd64_timer.cpp  amd64_timer.h
src/kernel/arch/amd64/memory/: CMakeLists.txt  amd64_paging.cpp  amd64_paging.h  pagetable.cpp  pagetable.h
src/kernel/arch/amd64/proc/: CMakeLists.txt  amd64_context.h  amd64_process.cpp  amd64_process.h  amd64_process_controller.cpp  amd64_process_controller.h  process.S  sync.cpp  sync.h
src/kernel/arch/amd64/video/: CMakeLists.txt  vga_terminal.cpp  vga_terminal.h
src/kernel/arch/x86_64/: CMakeLists.txt  boot.S  exception.cpp  exception.h  instructions.h  isr.S  isr.cpp  isr.h  kernel.ld  regs.h  segments.cpp  segments.h  task.S  vga_terminal.cpp  vga_terminal.h  x86_interface.cpp  x86_interface.h  x86_timer.cpp  x86_timer.h
src/kernel/arch/x86_64/memory/: CMakeLists.txt  pagetable.cpp  pagetable.h  x86_context.h  x86_paging.cpp  x86_paging.h
src/kernel/drivers/: CMakeLists.txt  ahci.cpp  ahci.h  ahci_structs.h  block_device.cpp  block_device.h  char_device.h  device_interface.h  generic_device.h  ide.cpp  ide.h  irq_handler.h  keyboard.cpp  keyboard.h  timer.h
src/kernel/drivers/bus/: pci.cpp  pci.h
src/kernel/drivers/controller/: ahci.cpp  ahci.h  ahci_structs.h
src/kernel/drivers/disk/: ide.h
src/kernel/drivers/disks/: ide.h
src/kernel/filesystems/: CMakeLists.txt  vfs.h
src/kernel/filesystems/ext2/: ext2.cpp  ext2.h  inode.h  superblock.h
src/kernel/klib/: bst.h  cmemory.h  functional.h  list.h  llist.h  logger.h  map.h  move.h  multiboot.h  new.cpp  new.h  optional.h  singleton.h  stdint.h  stdlib.h  string.cpp  string.h  table.h  timer.h  type_traits.h  utility.h  vector.h  xenon_base.h
src/kernel/libs/: cxa_guard.cpp  linked_list.cpp  linked_list.h  logger.h  new.h  singleton.h  stdlib.h  string.h
src/kernel/memory/: CMakeLists.txt  allocators.cpp  allocators.h  buddy.cpp  buddy.h  context.h  heap.cpp  heap.h  kmalloc.cpp  kmalloc.h  manager.cpp  manager.h  paging.h  physical.cpp  physical.h  process.cpp  process.h  task.cpp  task.h  virtual.cpp  virtual.h
src/kernel/proc/: CMakeLists.txt  context.cpp  context.h  process.cpp  process.h  process_controller.cpp  process_controller.h  scheduler.cpp  scheduler.h  task.h
src/programs/: shell.cpp  shell.h
