add_compile_options("-Wall")
add_compile_options("-Wextra")
add_compile_options("-m64")
add_compile_options("-ffreestanding")
add_compile_options("-mcmodel=kernel")
add_compile_options("-mno-red-zone")
add_compile_options("-mno-sse")
add_compile_options("-mno-sse2")
add_compile_options("-mno-mmx")
add_compile_options("-fno-rtti")
add_compile_options("-fno-PIC")
add_compile_options("-fno-pie")
add_compile_options("-fno-exceptions")
add_compile_options("-fno-unwind-tables")
add_compile_options("-z max-page-size=${MAX_PAGE_SIZE}")

add_definitions("-DDEBUG")

include_directories(kernel)
add_subdirectory(kernel)
